# SREAgents

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  start.sh
backend/: .env.example  mock_otel.py  pyproject.toml  scheduled_tasks_design.md  scheduler.py  server.py  test_scheduled_tasks.py
backend/.claude/skills/jaeger/: SKILL.md
backend/.claude/skills/prometheus/: SKILL.md
backend/agents/: agent-001.md  agent-1770631265249.md  agent-416910983.md
backend/chat_history/: agent-001.json
backend/projects/: proj-416685716.json  proj-417156847.json
backend/scheduled_tasks/: task-175029828.json
backend/scheduled_tasks/task-175029828/executions/: exec-175040016.json
backend/skills/: jaeger.md  prometheus.md
backend/storage/: __init__.py  base.py  github.py  local.py  manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/Agent/: AgentCard.jsx
frontend/src/components/Layout/: Header.jsx  Sidebar.jsx
frontend/src/components/Skill/: SkillCard.jsx  UploadSkillModal.jsx
frontend/src/components/common/: Modal.jsx
frontend/src/context/: AgentContext.jsx  ProjectContext.jsx  ScheduledTaskContext.jsx  ToastContext.jsx
frontend/src/pages/: AgentChat.jsx  AgentEdit.jsx  AgentList.jsx  ProjectDetail.jsx  ProjectList.jsx  ScheduledTaskDetail.jsx  ScheduledTaskEdit.jsx  ScheduledTaskList.jsx  Settings.jsx  SkillEdit.jsx  SkillList.jsx  TopologyEditor.jsx
