[project]
name = "ops-agent-backend"
version = "0.1.0"
description = "OpsAgent Platform Backend using Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
